Causeview Package Complete/ant script/retrieveUnpackaged/objects/Appeal__c.object
<CustomObject>
    <description>Causeview - No longer required.</description>
    <fields>
        <fullName>Appeal_Category__c</fullName>
        <label>Appeal Category</label>
        <picklist>
            <picklistValues>
                <fullName>Unsolicted/Unknown Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail - House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail - Acquisition Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Planned Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bequests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Name__c</fullName>
        <label>Appeal Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Gift_Amount__c</fullName>
        <label>Default Gift Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <description>Name of associated fund.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Fund__r.Id, Fund__r.Fund_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fund the appeal is linked to</description>
        <inlineHelpText>Select the fund related to the appeal</inlineHelpText>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines Appeal as a parent - top level.</description>
        <inlineHelpText>Defines Appeal as a parent - top level.</inlineHelpText>
        <label>Is Parent Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Appeal_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Parent_Appeal__r.Id, Parent_Appeal__r.Appeal_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Appeal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to parent appeal.</description>
        <label>Parent Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>(DEPRECATED)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appeal_Name__c</columns>
        <columns>Appeal_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Appeal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(DEPRECATED)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>